--- a/recipe.yaml
+++ b/recipe.yaml
@@ -76,12 +76,12 @@ tasks:
     src: ./tmp/ND_Core.zip
     dest: ./resources/[scripts]
 
-  # Download fivem-appearance
+  # Download illenium-appearance
   - action: download_file
-    url: https://github.com/Andyyy7666/fivem-appearance/releases/latest/download/fivem-appearance.zip
-    path: ./tmp/fivem-appearance.zip
+    url: https://github.com/iLLeniumStudios/illenium-appearance/releases/download/v5.6.1/illenium-appearance.zip
+    path: ./tmp/illenium-appearance.zip
   - action: unzip
-    src: ./tmp/fivem-appearance.zip
+    src: ./tmp/illenium-appearance.zip
     dest: ./resources/[dependencies]
 
   # Download ox_target
